# nanobot-factory

./: .audit-report.md  .dockerignore  .env.example  .env.production.example  .env.template  .gitignore  AUDIT_REPORT.md  CHANGELOG.md  Dockerfile  FINAL_DELIVERY_REPORT.md  FINAL_DELIVERY_REPORT_v2.md  Makefile  NEXT_STEPS.md  README.md  RELEASE_v1.0.0.md  SOUL.md  VDP-2026-v3-FINAL.md  _count_code.py  _count_endpoints.py  _locate_ts.py  _verify_app.py  code_stats.json  deploy.sh  docker-compose.yml  exhaustive_matrix.csv  exhaustive_report.md  exhaustive_results.json  index.html  launcher.vbs  package-lock.json  package.json  playwright.config.py  push_to_github.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  requirements_full.txt  research_summary_weixin_articles.md  server_nanobot.py  (+12 more)
backend/imdf/: .env.example  Dockerfile  IMDF_COMMERCIAL_PLAN.md  IMDF_COMMERCIAL_PLAN_FINAL.md  IMDF_COMMERCIAL_PLAN_v2.md  IMDF_PHASE2_PLAN_v3.md  PLAN_PENGUIN_INTEGRATION.md  README.md  __init__.py  _audit_probe.py  _final_db_state.py  _quickstart_app.py  _smoke_p2_1_w1.py  _verify_db.py  alembic.ini  audit.py  celery_app.py  check_p2.py  docker-compose.yml  imdf_alembic_check.txt  imdf_heads_check.txt  imdf_heads_check2.txt  imdf_runtime_check.txt  imdf_tables_runtime.txt  lineage.json  pyproject.toml  pytest.ini  requirements.txt  run.py  schema_check.py  skill.yaml  start.bat  start.sh  start_server.py  start_webui.sh  templates.json  upsert_p19_b2_providers.py
backend/imdf/agency/: __init__.py  departments.json  loader.py
backend/imdf/agent/: master_agent.py
backend/imdf/agents/: __init__.py  base.py  loader.py  registry.py
backend/imdf/alembic/: env.py
backend/imdf/api/: admin_routes.py  aesthetic_routes.py  annotation_history_routes.py  annotation_routes.py  api_key_routes.py  audio_routes.py  audit_routes.py  auth_routes.py  batch_routes.py  board_manager.py  book_routes.py  canvas_3d.py  canvas_web.py  classify_routes.py  cloud_storage.py  collection_routes.py  copyright_routes.py  crowd_routes.py  crowd_settlement.py  crowd_settlement_routes.py  dam_routes.py  data_browser_routes.py  db_models.py  delivery_routes.py  discovery_routes.py  drama_routes.py  enhanced_routes.py  export_enhanced_routes.py  export_routes.py  external_providers.py  external_routes.py  figma_bridge.py  health_routes.py  healthz.py  image_processor.py  intelligence_v4_routes.py  intelligence_v5_routes.py  labels_ontology_routes.py  local_model_routes.py  media_manager.py  (+37 more)
backend/imdf/billing/: __init__.py  api.py  cdp_billing.py  cdp_billing_schemas.py
backend/imdf/business/: __init__.py  audit_log.py  billing.py  data_exporter.py  tenant.py
backend/imdf/capabilities_v2/: __init__.py  dataflow.py  definitions.py  definitions_real.py  engine.py  routes.py
backend/imdf/common/: __init__.py  cache.py
backend/imdf/config/: global_config.py  platform_config.py  settings.py
backend/imdf/core/: canvas_core.py  data_quality.py
backend/imdf/crawler/: __init__.py  api_crawler.py  base.py  config.py  engine.py  registry.py  rss_crawler.py  web_crawler.py
backend/imdf/creative/: __init__.py
backend/imdf/db/: __init__.py  postgres.py
backend/imdf/deploy/: DEPLOY.md  alertmanager.yml  docker-compose-monitoring.yml  grafana-dashboard.json  imdf.service  install.sh  nginx-imdf.conf  prometheus-alerts.yml  prometheus.yml  setup-monitoring.sh  uninstall.sh
backend/imdf/deploy_r7/: readiness.py  routes.py
backend/imdf/docs/: ITERATION_PLAN.md  MONITORING.md  PENGUIN_MIGRATION_REPORT.md  PENGUIN_REWRITE_REPORT.md  UI_ARCHITECTURE_v2.md  UI_ARCHITECTURE_v3.md  USAGE.md  USER_FLOW.md  data_production_knowledge_base.md  feature_tree_v1.md  priority_plan_v1.md  workflow_engine_v1.md  三AGENT_互审实施方案.md
backend/imdf/engines/: aesthetic_engine.py  aesthetic_scorer.py  agent_engine.py  agent_router.py  agreement_engine.py  airi_digital_human.py  algorithm_review.py  annotation_quality.py  assertion_engine.py  audio_engine.py  audit_chain.py  book_engine.py  c2pa_engine.py  classification_engine.py  collection_quality.py  comfyui_engine.py  contract_validator.py  crawler_engine.py  crowd_platform.py  crowd_settlement.py  dam_engine.py  data_3d.py  data_collection_engine.py  data_delivery.py  data_edit.py  data_pipeline.py  data_t2i.py  (+66 more)
(+3225 files in other folders)
