[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanobot-factory-backend"
version = "1.0.0"
description = "Nanobot Factory Backend - AI Agent Production Platform"
authors = [
    {name = "MiniMax Agent", email = "contact@nanobot.ai"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["ai", "agent", "aigc", "multimedia", "desktop-app"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    # === Core Web Framework ===
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",

    # === HTTP & WebSocket Clients ===
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "httpx>=0.26.0",
    "requests>=2.31.0",

    # === Database ===
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",

    # === Utilities ===
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "pyyaml>=6.0",
    "aiofiles>=23.0.0",
    "psutil>=5.9.0",
    "aiodns>=3.0.0",
    "watchdog>=3.0.0",
    "python-dateutil>=2.8.0",
    "cryptography>=41.0.0",

    # === ML/AI Core ===
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "opencv-python-headless>=4.8.0",
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "sentence-transformers>=2.2.0",
    "scipy>=1.10.0",
    "pypdf>=3.15.0",

    # === Data Processing ===
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "jieba>=0.42.0",
]

[project.optional-dependencies]
# === Database Drivers (optional) ===
db = [
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "aiomysql>=0.2.0",
    "asyncpg-stubs>=0.29.0",
]

# === Message Queue (optional) ===
mq = [
    "aio-pika>=9.0.0",
    "pika>=1.3.0",
    "aiocouch>=0.0.29",
]

# === Object Storage (optional) ===
storage = [
    "boto3>=1.34.0",
    "aioboto3>=10.0.0",
    "aliyun-python-sdk-oss>=3.0.0",
]

# === ML/AI Extensions (optional) ===
ml = [
    "torchvision>=0.15.0",
    "diffusers>=0.25.0",
    "accelerate>=0.25.0",
    "safetensors>=0.4.0",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    "spacy>=3.7.0",
]

# === Database Utilities (optional) ===
utils = [
    "DBUtils>=3.1.0",
]

# === Dev Tools ===
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

# === GPU Support ===
gpu = [
    "nvidia-ml-py3>=7.352.0",
]

# === All-in-one install ===
all = [
    "nanobot-factory-backend[db,mq,storage,ml,utils,dev,gpu]",
]

[project.scripts]
nanobot-server = "nanobot_factory.server:main"

[tool.setuptools.packages.find]
where = ["backend"]
include = ["nanobot_factory*", "routes*"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
