[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "infinite-multimodal-data-foundry"
version = "0.1.0"
description = "Agent驱动的无限画布多模态生产系统 — 图片/视频/短剧/PPT/网页全自动生成"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Hermes Agent / Nurburgring-Zhang"},
]

dependencies = [
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
include = ["imdf", "imdf.*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
